# ADX-ddsPIO

./: CHANGELOG.md  CMakeLists.txt  FEATURES.md  QUICKREF.md  README.md  ROADMAP  TUTORIAL.md
PCB/: #auto_saved_files#  ADX-ddsPIO.kicad_prl  ADX-ddsPIO.kicad_pro  ADX-ddsPIO.kicad_sch
PCB/Raspberry-Pi-Pico-Symbol-and-Footprint-Library-Only/: RP2040_parts.kicad_sym  Raspberry Pi Pico.kicad_prl  Raspberry Pi Pico.kicad_pro  Raspberry Pi Pico.kicad_sch  sym-lib-table
crypt/archive/: ws2812.pio.h
doc/: ADX-ddsPIO_pinout.xlsx
examples/: README.md  band_scanner.c  simple_transmit.c
scripts/: envset.sh
src/: usb_descriptors.c
src/ADX-ddsPIO/: CMakeLists.txt  build.sh  lwipopts.h
src/ADX-ddsPIO/src/: ADX-ddsPIO.h  defines.h  macros.h  main.c  piodco.h  protos.h  tusb_config.h
src/ADX-ddsPIO/src/debug/: logutils.c  logutils.h
src/ADX-ddsPIO/src/gpstime/: GPStime.c  GPStime.h
src/ADX-ddsPIO/src/lib/: assert.h  utility.h
src/QP-7C/qp7c_rp2040_cat/: CMakeLists.txt  build.sh
src/samples/: sampleFT8.c  wrapperFT8.c
src/testADX/: CMakeLists.txt  testADX.c  testADX.h
src/testDDS/: CMakeLists.txt  testDDS.c
src/testFT8/: CMakeLists.txt  hwdefs.h  macros.h  testFT8.c  testFT8.h
src/testUSB/: CMakeLists.txt  README.md  pico_sdk_import.cmake
src/testUSB/src/: main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
src/testUSB2/: CMakeLists.txt
src/testUSB2/src/: main.c
src/testUSB3/: CMakeLists.txt  build.sh
src/testUSB3/src/: main.c  piodco.c
src/testUSB3/src/lib/: assert.c  (+1 more)
testDDS/: CMakeLists.txt  CMakeLists_old.txt  testDDS.c  testDDS.h
(+8 files in other folders)
